# Quant_AI_Dashboard

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.optimized  OPTIMIZATION_GUIDE.md  QUICKSTART.md  README.md  app.py  docker-compose.optimized.yml  docker-compose.worker.yml  docker-compose.yml  env.example  pytest.ini  requirements.native.txt  requirements.runtime.txt  requirements.txt  risk_config.json  run_backtest_worker.py  run_daemon.py  run_market_refresh_worker.py  run_prediction_worker.py  run_scan_worker.py  set_password.py  start.bat  start.ps1  start_dashboard.bat  start_dashboard.ps1  start_optimized.sh  优化建议.md  数据源对比文档.md
.streamlit/: config.toml  style.css
api/: README.md  __init__.py  auth.py  dependencies.py  main.py  main_optimized.py  middleware.py  router_registry.py  websocket_manager.py
core/: __init__.py  account.py  account_manager.py  advanced_forecasting.py  api_response_cache.py  app_utils.py  apple_ui.py  asset_metadata.py  async_data_service.py  audit_log.py  auto_paper_trading.py  auto_trader.py  auto_trading_guardrails.py  backtest.py  backtest_engine.py  backtest_inputs.py  backtest_tasks.py  backup_manager.py  broker_simulator.py  cache_utils.py  correlation.py  daemon.py  daily_workbench.py  data_cleaning.py  data_freshness.py  data_quality.py  data_repair.py  data_service.py  data_store.py  data_store_adapter.py  data_updater.py  data_utils.py  data_validation.py  data_versioning.py  database.py  (+69 more)
quant_kernel/: Cargo.toml  pyproject.toml
quant_kernel/src/: lib.rs
(+477 files in other folders)
